[package]
name = "treegen"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
nalgebra = "0.24.1"
ncollide3d = "0.27.0"

[dev-dependencies]
kiss3d = "0.29.0"
